--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,32 @@
     box-sizing: border-box;
 }
 
+:root {
+    --light-theme-white: rgb(238, 238, 238);
+    --light-theme-bolder: rgb(243, 134, 0);
+    --light-theme-shadow: black
+}
+
 html {
     font-size: 62.5%;
 }
 
+strong {
+    color: var(--light-theme-bolder);
+    text-shadow: 1px 1px var(--light-theme-shadow);
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+  
 .Main.Container {
     width: 100vw;
     height: auto;
     font-size: 1rem;
-    border: 5px solid black;
+    font-family: 'Roboto', sans-serif;
+    animation: fadeIn 1s;
 }
 
 .Main.Container .Page.Header {
@@ -33,11 +50,16 @@ html {
 .Main.Container .Page.Content .Title {
     display: flex;
     align-items: center;
+    justify-content: center;
     text-align: center;
-    font-size: 2rem;
+    font-style: italic;
+    width: 100%;
+    opacity: 0.8;
     padding: 2%;
-    width: auto;
-    background: tomato;
+    font-size: 2rem;
+    text-shadow: 1px 1px var(--light-theme-shadow);
+    color: var(--light-theme-bolder);
+    background: var(--light-theme-white);
 }
 
 .Main.Container .Page.Content .Main.Content.Display {
@@ -46,9 +68,8 @@ html {
     grid-template-rows: repeat(3, 1fr);
     gap: 50px;
     width: 90%;
-    height: 600px;
     padding: 2%;
-    background: lightblue;
+    height: 600px;
 }
 
 .Main.Container .Page.Content .Main.Content.Display > div  {
@@ -56,9 +77,10 @@ html {
     flex-direction: column;
     text-align: center;
     justify-content: center;
-    border: 3px solid black;
+    padding: 3%;
     font-size: 2rem;
     overflow: hidden;
+    background: var(--light-theme-white)
 }
 
 .Main.Container .Page.Content .Main.Content.Display .Text.Card.One {
@@ -71,16 +93,16 @@ html {
 .Main.Container .Page.Content .Second.Content.Display {
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    gap: 50px;
-    height: 500px;
     width: 100%;
+    height: 500px;
+    gap: 50px;
     padding: 2%;
-    background: lightblue;
+    background: var(--light-theme-white);
 }
 
 .Main.Container .Page.Content .Second.Content.Display .Image.Card  {
-    border: 1px solid black;
     border-radius: 25px;
+    border: 1px solid rgb(97, 97, 97);
 }
 
 .Main.Container .Page.Content .Second.Content.Display .Image.Card > h3 {
@@ -90,12 +112,14 @@ html {
     justify-content: center;
     height: 15%;
     font-size: 2rem;
+    border-radius: 0px 0px 25px 25px;
+    background-color: var(--light-theme-bolder);
 }
 
 .Main.Container .Page.Content .Second.Content.Display .Image.Card .Image.Container {
-    background: lightpink;
     height: 85%;
     border-radius: 25px 25px 0px 0px;
+    background: rgb(242, 242, 242);
 }
 
 .Main.Container .Page.Content .Second.Content.Display .Image.Card .Image.Container img {
@@ -111,7 +135,7 @@ html {
     width: 100%;
     height: 50px;
     font-size: 1.5rem;
-    background: lightpink;
+    background: var(--light-theme-bolder);
 }
 
 .Main.Container .Page.Footer .Content > a > img {
