--- a/styles.css
+++ b/styles.css
@@ -5,19 +5,16 @@
 
 :root {
     --blue: rgb(45, 115, 255);
+    --yellow: rgb(250, 221, 61);
 }
-
-
-/* Track */
-::-webkit-scrollbar-thumb:hover {
-    background: #f1f1f1;
-}
-
-
 
 html {
-    font-size: 10px;
-    font-family: Roboto, sans-serif;
+  font-size: 10px;
+  font-family: Roboto, sans-serif;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #f1f1f1;
 }
 
 ::-webkit-scrollbar {
@@ -33,16 +30,16 @@ html {
     border-radius: 2.5em;
 }
 
+/* Track */
+
+
+
 h1 {
     font-size: 6rem;
     letter-spacing: 1rem;
     font-weight: lighter;
     color: white;
-}
-
-h1:hover {
-    color: blue;
-    animation: 3s ease-in;
+    animation: changing-color 3s ease-in infinite;
 }
 
 h2 {
@@ -60,6 +57,12 @@ h3 {
     color: var(--blue);
 }
 
+@keyframes changing-color {
+    0% {color: white;}
+    50% {color: var(--blue);}
+    80% {color: white }
+}
+
 .Main.Container {
     display: flex;
     flex-direction: column;
@@ -68,7 +71,7 @@ h3 {
     gap: 5px;
     height: 100vh;
     width: 100vw;
-    background: #3e9433;
+    background: linear-gradient(#3e9433, #317828); 
 }
 
 .Main.Container .Main.Card {
@@ -81,15 +84,15 @@ h3 {
     padding: 2%;
     overflow: scroll;
     overflow-x: hidden;
-    background: rgb(250, 221, 61);
+    background: var(--yellow);
 }
 
 .Main.Card > div {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2%;
     background: white;
+    border: 2px solid black;
     border-radius: 2.5em;
 }
 
@@ -114,15 +117,18 @@ h3 {
 
 .Main.Card .Paragraph.One,
 .Main.Card .Paragraph.Two {
-    font-size: 1.5rem;
+    font-size: 1.75rem;
+    padding: 2%;
     overflow: hidden;
     color: var(--blue);
 }
 
 .Main.Card .Cards {
     display: grid;
-    gap: 5%; 
     grid-template-columns: repeat(4, 1fr); 
+    gap: 5%; 
+    padding: 3%;
+    background: white;
 }
 
 .Main.Card .Cards  > *{
@@ -135,6 +141,7 @@ h3 {
     box-shadow: 1em 1em black;
     color: white;
     background: var(--blue);
+    transition: transform 0.3s;
 }
 
 .Main.Card .Cards .Recipe.Container {
@@ -150,4 +157,54 @@ h3 {
 .Main.Card .Cards  p {
     font-size: 1.65em;
     text-align: center;
+}
+
+.Main.Container .Recipe.Card {
+    width: 74%;
+    height: 80%;
+    background: var(--yellow);
+    display: none;
+}
+
+.Main.Card .Cards > div:hover {
+    filter: blur(0px);
+}
+
+@media (max-width: 51rem) {
+    
+    h1 {
+        text-align: center;
+    }
+
+    .Main.Container .Main.Card {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: 50% 50% 10% 280%;
+        font-size: 1.5vw;
+        padding: 5%;
+    }
+
+    .Main.Container .Main.Card > div {
+        grid-column: 1/3;
+    }
+
+    .Main.Container .Main.Card > div:nth-child(4) {
+        text-align: center;
+    }
+
+    .Main.Card .Image {
+        display: none;
+    }
+
+    .Main.Card .Cards {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr); 
+        padding: 3%;   
+    }
+
+    .Main.Card .Cards > div > h3 {
+        font-size: 3rem;
+    }
+
+
 }
